precompiles/utils/macro/tests/precompile/discriminant/type-mismatch-1.stderr
error: All discriminants must have the same type (found u64 before)
  --> tests/precompile/discriminant/type-mismatch-1.rs:27:24
   |
27 |     fn foo(_discriminant: u32, test: &mut impl PrecompileHandle) -> EvmResult {
   |                           ^^^
